@@ -18,53 +18,27 @@
 
 package org.apache.commons.compress.archivers.zip;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 /**
- * JUnit testcases for org.apache.commons.compress.archivers.zip.ZipShort.
+ * JUnit tests for org.apache.commons.compress.archivers.zip.ZipShort.
  *
  */
 public class ZipShortTest {
 
-    /**
-     * Test conversion to bytes.
-     */
     @Test
-    public void testToBytes() {
-        final ZipShort zs = new ZipShort(0x1234);
-        final byte[] result = zs.getBytes();
-        assertEquals("length getBytes", 2, result.length);
-        assertEquals("first byte getBytes", 0x34, result[0]);
-        assertEquals("second byte getBytes", 0x12, result[1]);
+    public void testClone() {
+        final ZipShort s1 = new ZipShort(42);
+        final ZipShort s2 = (ZipShort) s1.clone();
+        assertNotSame(s1, s2);
+        assertEquals(s1, s2);
+        assertEquals(s1.getValue(), s2.getValue());
     }
 
-
-    /**
-     * Test conversion to bytes.
-     */
-    @Test
-    public void testPut() {
-        final byte[] arr = new byte[3];
-        ZipShort.putShort(0x1234, arr, 1);
-        assertEquals("first byte getBytes", 0x34, arr[1]);
-        assertEquals("second byte getBytes", 0x12, arr[2]);
-    }
-
-
-    /**
-     * Test conversion from bytes.
-     */
-    @Test
-    public void testFromBytes() {
-        final byte[] val = new byte[] {0x34, 0x12};
-        final ZipShort zs = new ZipShort(val);
-        assertEquals("value from bytes", 0x1234, zs.getValue());
-    }
 
     /**
      * Test the contract of the equals method.
@@ -75,15 +49,37 @@ public class ZipShortTest {
         final ZipShort zs2 = new ZipShort(0x1234);
         final ZipShort zs3 = new ZipShort(0x5678);
 
-        assertEquals("reflexive", zs, zs);
+        assertEquals(zs, zs, "reflexive");
 
-        assertEquals("works", zs, zs2);
-        assertNotEquals("works, part two", zs, zs3);
+        assertEquals(zs, zs2, "works");
+        assertNotEquals(zs, zs3, "works, part two");
 
-        assertEquals("symmetric", zs2, zs);
+        assertEquals(zs2, zs, "symmetric");
 
-        assertNotEquals("null handling", null, zs);
-        assertNotEquals("non ZipShort handling", zs, new Integer(0x1234));
+        assertNotEquals(null, zs, "null handling");
+        assertNotEquals(zs, Integer.valueOf(0x1234), "non ZipShort handling");
+    }
+
+
+    /**
+     * Test conversion from bytes.
+     */
+    @Test
+    public void testFromBytes() {
+        final byte[] val = {0x34, 0x12};
+        final ZipShort zs = new ZipShort(val);
+        assertEquals(0x1234, zs.getValue(), "value from bytes");
+    }
+
+    /**
+     * Test conversion to bytes.
+     */
+    @Test
+    public void testPut() {
+        final byte[] arr = new byte[3];
+        ZipShort.putShort(0x1234, arr, 1);
+        assertEquals(0x34, arr[1], "first byte getBytes");
+        assertEquals(0x12, arr[2], "second byte getBytes");
     }
 
     /**
@@ -95,12 +91,15 @@ public class ZipShortTest {
         assertEquals(0x0000FFFF, zs.getValue());
     }
 
+    /**
+     * Test conversion to bytes.
+     */
     @Test
-    public void testClone() {
-        final ZipShort s1 = new ZipShort(42);
-        final ZipShort s2 = (ZipShort) s1.clone();
-        assertNotSame(s1, s2);
-        assertEquals(s1, s2);
-        assertEquals(s1.getValue(), s2.getValue());
+    public void testToBytes() {
+        final ZipShort zs = new ZipShort(0x1234);
+        final byte[] result = zs.getBytes();
+        assertEquals(2, result.length, "length getBytes");
+        assertEquals(0x34, result[0], "first byte getBytes");
+        assertEquals(0x12, result[1], "second byte getBytes");
     }
 }
